welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:6: error: '<-' expected but '=' found.
		for (j=1 to 5){
                      ^Poucet:19: error: illegal start of simple expression
	}while (croisement=false)
        ^